--- a/intelcobro-frontend/package.json
+++ b/intelcobro-frontend/package.json
@@ -10,27 +10,30 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "next": "^14.0.4",
-    "styled-components": "^6.1.6",
-    "framer-motion": "^10.16.16",
-    "react-hook-form": "^7.48.2",
+    "@fortawesome/fontawesome-svg-core": "^7.0.0",
+    "@fortawesome/free-solid-svg-icons": "^7.0.0",
+    "@fortawesome/react-fontawesome": "^0.2.3",
     "@hookform/resolvers": "^3.3.2",
-    "yup": "^1.4.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.302.0",
     "axios": "^1.6.2",
-    "next-themes": "^0.2.1"
+    "framer-motion": "^10.16.16",
+    "lucide-react": "^0.302.0",
+    "next": "^14.0.4",
+    "next-themes": "^0.2.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
+    "styled-components": "^6.1.6",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.3",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.46",
     "@types/react-dom": "^18.2.18",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^8.56.0",
-    "eslint-config-next": "^14.0.4"
+    "eslint-config-next": "^14.0.4",
+    "typescript": "^5.3.3"
   }
 }
